--- a/index.html
+++ b/index.html
@@ -1,22 +1,72 @@
+
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Hello Bulma!</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.5.0/css/bulma.min.css">
-  </head>
-  <body>
-  <section class="section">
-    <div class="container">
-      <h1 class="title">
-        Hello World
-      </h1>
-      <p class="subtitle">
-        My first website with <strong>Bulma</strong>!
-      </p>
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Hi! I'm David</title>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+  <link rel="stylesheet" type="text/css" href="../css/bulma.css">
+  <link rel="stylesheet" type="text/css" href="../css/hero.css">
+</head>
+<body>
+  <section class="hero is-primary is-large header-image">
+    <div class="hero-head">
+      <header class="nav">
+        <div class="container">
+          <div class="nav-left">
+            <a class="nav-item" href="../index.html">
+              <!-- <img src="../images/bulma-white.png" alt="Logo"> -->
+            </a>
+          </div>
+          <span class="nav-toggle">
+            <span></span>
+            <span></span>
+            <span></span>
+          </span>
+          <div class="nav-right nav-menu">
+            <a class="nav-item is-active">
+              Home
+            </a>
+            <a class="nav-item">
+              Resume
+            </a>
+            <a class="nav-item">
+              Portfolio
+            </a>
+            <!-- <span class="nav-item">
+              <a class="button is-info is-outlined is-inverted">
+                <span class="icon">
+                  <i class="fa fa-github"></i>
+                </span>
+                <span>Download</span>
+              </a>
+            </span> -->
+          </div>
+        </div>
+      </header>
+    </div>
+    <div class="hero-body">
+      <div class="container has-text-centered">
+        <h1 class="title is-2">
+          David Le
+        </h1>
+        <h2 class="subtitle is-5">
+          Computational Media Student at the Georgia Institute of Technology
+        </h2>
+      </div>
     </div>
   </section>
-  </body>
+  <footer class="footer">
+    <div class="container">
+      <div class="content has-text-centered">
+        <p>
+          Created with <strong>Bulma</strong> by <a href="http://jgthms.com">Jeremy Thomas</a>.
+        </p>
+      </div>
+    </div>
+  </footer>
+  <script async type="text/javascript" src="../js/bulma.js"></script>
+</body>
 </html>
