Took out footer

--- a/index.html
+++ b/index.html
@@ -56,17 +56,26 @@
           Computational Media Student at the Georgia Institute of Technology
         </h2>
       </div>
-    </div>
-  </section>
-  <footer class="footer">
-    <div class="container">
-      <div class="content has-text-centered">
-        <p>
-          Created with <strong>Bulma</strong> by <a href="http://jgthms.com">Jeremy Thomas</a>.
-        </p>
+      <div class="container has-text-centered">
+          <span class="icon">
+              <i class="fa fa-github"></i>
+          </span>
+          <span class="icon">
+              <i class="fa fa-linkedin-square"></i>
+          </span>
+          <span class="icon">
+              <i class="fa fa-instagram"></i>
+          </span>
+      </div>
+      <div class="container">
+        <div class="content has-text-centered">
+          <p>
+            Created with <strong>Bulma</strong> by <a href="http://jgthms.com">Jeremy Thomas</a>.
+          </p>
+        </div>
       </div>
     </div>
-  </footer>
+  </section>
   <script async type="text/javascript" src="../js/bulma.js"></script>
 </body>
 </html>
