Put icons in padded table and add links

--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
   <link rel="stylesheet" type="text/css" href="../css/bulma.css">
   <link rel="stylesheet" type="text/css" href="../css/hero.css">
+  <style>
+    td {
+      padding-left: 25px;
+      padding-right: 25px;
+      padding-top: 25px;
+      padding-bottom: 20px;
+    }
+  </style>
 </head>
 <body>
   <section class="hero is-primary is-large header-image">
@@ -35,14 +43,6 @@
             <a class="nav-item">
               Portfolio
             </a>
-            <!-- <span class="nav-item">
-              <a class="button is-info is-outlined is-inverted">
-                <span class="icon">
-                  <i class="fa fa-github"></i>
-                </span>
-                <span>Download</span>
-              </a>
-            </span> -->
           </div>
         </div>
       </header>
@@ -53,24 +53,36 @@
           David Le
         </h1>
         <h2 class="subtitle is-5">
-          Computational Media Student at the Georgia Institute of Technology
+          Computational Media Student at Georgia Tech
         </h2>
       </div>
-      <div class="container has-text-centered">
-          <span class="icon">
-              <i class="fa fa-github"></i>
-          </span>
-          <span class="icon">
-              <i class="fa fa-linkedin-square"></i>
-          </span>
-          <span class="icon">
-              <i class="fa fa-instagram"></i>
-          </span>
-      </div>
+      <table align="center">
+          <td>
+              <a href="https://github.com/davidhle" target="_blank">
+                  <span class="icon">
+                      <i class="fa fa-github"style="font-size: 44px;"></i>
+                  </span>
+              </a>
+          </td>
+          <td>
+              <a href="https://www.linkedin.com/in/david-le-9b0b45102/" target="_blank">
+                  <span class="icon">
+                      <i class="fa fa-linkedin-square"style="font-size: 44px;"></i>
+                  </span>
+              </a>
+          </td>
+          <td>
+              <a href="https://www.instagram.com/thedavidle/" target="_blank">
+                  <span class="icon">
+                      <i class="fa fa-instagram"style="font-size: 44px;"></i>
+                  </span>
+              </a>
+          </td>
+      </table>
       <div class="container">
         <div class="content has-text-centered">
           <p>
-            Created with <strong>Bulma</strong> by <a href="http://jgthms.com">Jeremy Thomas</a>.
+            Created with <strong>Bulma</strong> by <a href="http://jgthms.com"><u>Jeremy Thomas</u></a>.
           </p>
         </div>
       </div>
