--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="container">
           <div class="nav-left">
             <a class="nav-item" href="../index.html">
-              <!-- <img src="../images/bulma-white.png" alt="Logo"> -->
+              <img src="../images/david.png" alt="Logo">
             </a>
           </div>
           <span class="nav-toggle">
