Scrapping things and starting simple

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Hi! I'm David</title>
+  <title>David Le</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
   <link rel="stylesheet" type="text/css" href="../css/bulma.css">
   <link rel="stylesheet" type="text/css" href="../css/hero.css">
@@ -19,75 +19,49 @@
   </style>
 </head>
 <body>
-  <section class="hero is-primary is-large header-image">
-    <div class="hero-head">
-      <header class="nav">
-        <div class="container">
-          <div class="nav-left">
-            <a class="nav-item" href="../index.html">
-              <img src="../images/david.png" alt="Logo">
-            </a>
-          </div>
-          <span class="nav-toggle">
-            <span></span>
-            <span></span>
-            <span></span>
-          </span>
-          <div class="nav-right nav-menu">
-            <a class="nav-item is-active">
-              Home
-            </a>
-            <a class="nav-item">
-              Resume
-            </a>
-            <a class="nav-item">
-              Portfolio
-            </a>
-          </div>
-        </div>
-      </header>
-    </div>
-    <div class="hero-body">
-      <div class="container has-text-centered">
-        <h1 class="title is-2">
-          David Le
-        </h1>
-        <h2 class="subtitle is-5">
-          Computational Media Student at Georgia Tech
-        </h2>
-      </div>
-      <table align="center">
-          <td>
-              <a href="https://github.com/davidhle" target="_blank">
-                  <span class="icon">
-                      <i class="fa fa-github"style="font-size: 44px;"></i>
-                  </span>
-              </a>
-          </td>
-          <td>
-              <a href="https://www.linkedin.com/in/david-le-9b0b45102/" target="_blank">
-                  <span class="icon">
-                      <i class="fa fa-linkedin-square"style="font-size: 44px;"></i>
-                  </span>
-              </a>
-          </td>
-          <td>
-              <a href="https://www.instagram.com/thedavidle/" target="_blank">
-                  <span class="icon">
-                      <i class="fa fa-instagram"style="font-size: 44px;"></i>
-                  </span>
-              </a>
-          </td>
-      </table>
-      <div class="container">
-        <div class="content has-text-centered">
-          <p>
-            Created with <strong>Bulma</strong> by <a href="http://jgthms.com"><u>Jeremy Thomas</u></a>.
-          </p>
+    <!-- <nav class="navbar">
+      <div class="navbar-brand">
+        <a class="navbar-item" href="http://davidhle.github.io">
+          <img src="../images/david.png" alt="Bulma: a modern CSS framework based on Flexbox" width="112" height="28">
+        </a>
+
+        <div class="navbar-burger">
+          <span></span>
+          <span></span>
+          <span></span>
         </div>
       </div>
-    </div>
-  </section>
-  <script async type="text/javascript" src="../js/bulma.js"></script>
+    </nav> -->
+  <div class="container has-text-centered">
+    <h1 class="title is-2">
+      David Le
+    </h1>
+    <h2 class="subtitle is-5">
+      Computational Media Student at Georgia Tech
+    </h2>
+    <table align="center">
+        <td>
+            <a href="https://github.com/davidhle" target="_blank">
+                <span class="icon">
+                    <i class="fa fa-github"style="font-size: 44px;"></i>
+                </span>
+            </a>
+        </td>
+        <td>
+            <a href="https://www.linkedin.com/in/david-le-9b0b45102/" target="_blank">
+                <span class="icon">
+                    <i class="fa fa-linkedin-square"style="font-size: 44px;"></i>
+                </span>
+            </a>
+        </td>
+        <td>
+            <a href="https://www.instagram.com/thedavidle/" target="_blank">
+                <span class="icon">
+                    <i class="fa fa-instagram"style="font-size: 44px;"></i>
+                </span>
+            </a>
+        </td>
+    </table>
+  </div>
 </body>
 </html>
