basic idea down

--- a/index.html
+++ b/index.html
@@ -8,30 +8,30 @@
   <title>David Le</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
   <link rel="stylesheet" type="text/css" href="../css/bulma.css">
-  <link rel="stylesheet" type="text/css" href="../css/hero.css">
+  <link rel="stylesheet" type="text/css" href="../css/main.css">
   <style>
     td {
       padding-left: 25px;
       padding-right: 25px;
-      padding-top: 25px;
-      padding-bottom: 20px;
+      padding-top: 10px;
+      padding-bottom: 10px;
+    }
+    div.container {
+        border-style: solid;
+        border-color: white;
+        max-width: 500px;
+        background-color: white;
+        background: rgba(20, 25, 25, .5);
+    }
+    h1.title {
+        color: white;
+    }
+    h2.subtitle {
+        color: white;
     }
   </style>
 </head>
 <body>
-    <!-- <nav class="navbar">
-      <div class="navbar-brand">
-        <a class="navbar-item" href="http://davidhle.github.io">
-          <img src="../images/david.png" alt="Bulma: a modern CSS framework based on Flexbox" width="112" height="28">
-        </a>
-
-        <div class="navbar-burger">
-          <span></span>
-          <span></span>
-          <span></span>
-        </div>
-      </div>
-    </nav> -->
   <div class="container has-text-centered">
     <h1 class="title is-2">
       David Le
