Add linear gradient to background

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         border-color: white;
         max-width: 500px;
         background-color: white;
-        background: rgba(20, 25, 25, .5);
+        background: rgba(0, 0, 0, 0);
     }
     h1.title {
         color: white;
@@ -36,7 +36,7 @@
     <h1 class="title is-2">
       David Le
     </h1>
-    <h2 class="subtitle is-5">
+    <h2 class="subtitle">
       Computational Media Student at Georgia Tech
     </h2>
     <table align="center">
