--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 </head>
 <body>
   <div class="container has-text-centered">
+    <div class="items animated fadeIn">
     <h1 class="title is-2">
       David Le
     </h1>
@@ -22,25 +23,26 @@
         <td>
             <a href="https://github.com/davidhle" target="_blank">
                 <span class="icon">
-                    <i class="fa fa-github"style="font-size: 44px;"></i>
+                    <i class="fa fa-github"style="font-size: 44px; color: white" id="github"></i>
                 </span>
             </a>
         </td>
         <td>
             <a href="https://www.linkedin.com/in/david-le-9b0b45102/" target="_blank">
                 <span class="icon">
-                    <i class="fa fa-linkedin-square"style="font-size: 44px;"></i>
+                    <i class="fa fa-linkedin-square"style="font-size: 44px; color: white" id="linkedin"></i>
                 </span>
             </a>
         </td>
         <td>
             <a href="https://www.instagram.com/thedavidle/" target="_blank">
                 <span class="icon">
-                    <i class="fa fa-instagram"style="font-size: 44px;"></i>
+                    <i class="fa fa-instagram"style="font-size: 44px; color: white" id="instagram"></i>
                 </span>
             </a>
         </td>
     </table>
+    </div>
   </div>
 </body>
 </html>
