Add font to title

--- a/index.html
+++ b/index.html
@@ -13,31 +13,33 @@
 <body>
   <div class="container has-text-centered">
     <div class="items animated fadeIn">
+    <!-- Title Texts -->
     <h1 class="title is-2">
       David Le
     </h1>
     <h2 class="subtitle">
       Computational Media Student at Georgia Tech
     </h2>
+    <!-- Social Media Icons -->
     <table align="center">
         <td>
             <a href="https://github.com/davidhle" target="_blank">
                 <span class="icon">
-                    <i class="fa fa-github"style="font-size: 44px; color: white" id="github"></i>
+                    <i class="fa fa-github"style="font-size: 35px; color: white" id="github"></i>
                 </span>
             </a>
         </td>
         <td>
             <a href="https://www.linkedin.com/in/david-le-9b0b45102/" target="_blank">
                 <span class="icon">
-                    <i class="fa fa-linkedin-square"style="font-size: 44px; color: white" id="linkedin"></i>
+                    <i class="fa fa-linkedin-square"style="font-size: 35px; color: white" id="linkedin"></i>
                 </span>
             </a>
         </td>
         <td>
             <a href="https://www.instagram.com/thedavidle/" target="_blank">
                 <span class="icon">
-                    <i class="fa fa-instagram"style="font-size: 44px; color: white" id="instagram"></i>
+                    <i class="fa fa-instagram"style="font-size: 35px; color: white" id="instagram"></i>
                 </span>
             </a>
         </td>
