--- a/index.html
+++ b/index.html
@@ -43,6 +43,13 @@
                 </span>
             </a>
         </td>
+        <td>
+            <a href="https://www.behance.net/davidhle0f49" target="_blank">
+                <span class="icon">
+                    <i class="fa fa-behance-square"style="font-size: 35px; color: white" id="behance"></i>
+                </span>
+            </a>
+        </td>
     </table>
     </div>
   </div>
