--- a/index.html
+++ b/index.html
@@ -12,47 +12,54 @@
   <link rel="stylesheet" type="text/css" href="../css/animate.css">
 </head>
 <body>
-  <div class="container has-text-centered">
-    <div class="items animated fadeIn">
-    <!-- Title Texts -->
-    <h1 class="title is-2">
-      David Le
-    </h1>
-    <h2 class="subtitle">
-      Computational Media Student at Georgia Tech
-    </h2>
-    <!-- Social Media Icons -->
-    <table align="center">
-        <td>
-            <a href="https://github.com/davidhle" target="_blank">
-                <span class="icon">
-                    <i class="fa fa-github"style="font-size: 35px; color: white" id="github"></i>
-                </span>
-            </a>
-        </td>
-        <td>
-            <a href="https://www.linkedin.com/in/david-le-9b0b45102/" target="_blank">
-                <span class="icon">
-                    <i class="fa fa-linkedin-square"style="font-size: 35px; color: white" id="linkedin"></i>
-                </span>
-            </a>
-        </td>
-        <td>
-            <a href="https://www.instagram.com/thedavidle/" target="_blank">
-                <span class="icon">
-                    <i class="fa fa-instagram"style="font-size: 35px; color: white" id="instagram"></i>
-                </span>
-            </a>
-        </td>
-        <td>
-            <a href="https://www.behance.net/davidhle0f49" target="_blank">
-                <span class="icon">
-                    <i class="fa fa-behance-square"style="font-size: 35px; color: white" id="behance"></i>
-                </span>
-            </a>
-        </td>
-    </table>
+    <nav class="navbar is-transparent animated slideInRight">
+      <!-- <div class="navbar-brand"> commented out until logo created
+        <a class="navbar-item" href="http://davidhle.com">
+        </a>
+      </div> -->
+        <div class="navbar-end">
+              <div class="navbar-item">
+                <a class ="links" href="about.html">ABOUT</a>
+              </div>
+              <div class="navbar-item">
+                <a class ="links"  href="portfolio.html">PORTFOLIO</a>
+              </div>
+              <div class="navbar-item " href="DavidLe_Resume.pdf" target="blank">
+                <a class ="links"  href="DavidLe_Resume.pdf" target="_blank">RESUME</a>
+              </div>
+        </div>
+    </nav>
+    <div class="container">
+      <div class="items animated fadeIn">
+      <!-- Title Texts -->
+      <h1 class="title is-2">
+        <a href="http://davidhle.com/">David Le</a>
+      </h1>
+      <h2 class="subtitle">
+        Computational Media Student at Georgia Tech
+      </h2>
+      <!-- Social Media Icons -->
+      <a href="https://github.com/davidhle" target="_blank">
+          <span class="icon">
+              <i class="fa fa-github"style="font-size: 35px" id="github"></i>
+          </span>
+      </a>
+      <a href="https://www.linkedin.com/in/david-le-9b0b45102/" target="_blank">
+          <span class="icon">
+              <i class="fa fa-linkedin-square"style="font-size: 35px" id="linkedin"></i>
+          </span>
+      </a>
+      <a href="https://www.instagram.com/thedavidle/" target="_blank">
+          <span class="icon">
+              <i class="fa fa-instagram"style="font-size: 35px;" id="instagram"></i>
+          </span>
+      </a>
+      <a href="https://www.behance.net/davidhle0f49" target="_blank">
+          <span class="icon">
+              <i class="fa fa-behance-square"style="font-size: 35px" id="behance"></i>
+          </span>
+      </a>
+      </div>
     </div>
-  </div>
 </body>
 </html>
