Change font for navbar items and route to about.html and portfolio.html and home
fixed the routing by setting up the html of the other pages and added D
L to route to home until I design a logo lol

--- a/index.html
+++ b/index.html
@@ -13,10 +13,12 @@
 </head>
 <body>
     <nav class="navbar is-transparent animated slideInRight">
-      <!-- <div class="navbar-brand"> commented out until logo created
-        <a class="navbar-item" href="http://davidhle.com">
-        </a>
-      </div> -->
+      <div class="navbar-start">
+          <div class="navbar-item">
+              <a class="links" href="#"> D L
+              </a>
+          </div>
+      </div>
         <div class="navbar-end">
               <div class="navbar-item">
                 <a class ="links" href="about.html">ABOUT</a>
