Fixed routing to home and took out animation for about and portfolio

--- a/about.html
+++ b/about.html
@@ -12,10 +12,10 @@
   <link rel="stylesheet" type="text/css" href="../css/animate.css">
 </head>
 <body>
-    <nav class="navbar is-transparent animated slideInRight">
+    <nav class="navbar is-transparent">
         <div class="navbar-start">
             <div class="navbar-item">
-                <a class="links" href="#"> D L
+                <a class="links" href="index.html"> D L
                 </a>
             </div>
         </div>
