Add coming soon to about.html and portfolio.html and update resume

--- a/portfolio.html
+++ b/portfolio.html
@@ -31,5 +31,7 @@
               </div>
         </div>
     </nav>
+        <h1> COMING SOON :)</h1>
+        <h2> check out my resume! </h2>
 </body>
 </html>
