Add classes to coming soon

--- a/about.html
+++ b/about.html
@@ -31,6 +31,6 @@
               </div>
         </div>
     </nav>
-    <h1> COMING SOON :)</h1>
+    <h1 class="title"> COMING SOON :)</h1>
 </body>
 </html>
