--- a/portfolio.html
+++ b/portfolio.html
@@ -31,7 +31,7 @@
               </div>
         </div>
     </nav>
-        <h1> COMING SOON :)</h1>
-        <h2> check out my resume! </h2>
+        <h1 class="title"> COMING SOON :)</h1>
+        <h2 class="subtitle"> check out my resume! </h2>
 </body>
 </html>
