--- a/about.html
+++ b/about.html
@@ -30,6 +30,11 @@
                 <a class ="links"  href="DavidLe_Resume.pdf" target="_blank">RESUME</a>
               </div>
         </div>
+        <button class="button navbar-burger">
+            <span></span>
+            <span></span>
+            <span></span>
+        </button>
     </nav>
     <h1 class="title"> COMING SOON :)</h1>
 </body>
