--- a/index.html
+++ b/index.html
@@ -30,6 +30,11 @@
                 <a class ="links"  href="DavidLe_Resume.pdf" target="_blank">RESUME</a>
               </div>
         </div>
+        <button class="button navbar-burger">
+            <span></span>
+            <span></span>
+            <span></span>
+        </button>
     </nav>
     <div class="container">
       <div class="items animated fadeIn">
