--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
               </a>
           </div>
       </div>
+      <!-- <button class="button navbar-burger">
+          <span></span>
+          <span></span>
+          <span></span>
+      </button> -->
         <div class="navbar-end">
               <div class="navbar-item">
                 <a class ="links" href="about.html">ABOUT</a>
@@ -30,13 +35,8 @@
                 <a class ="links"  href="DavidLe_Resume.pdf" target="_blank">RESUME</a>
               </div>
         </div>
-        <button class="button navbar-burger">
-            <span></span>
-            <span></span>
-            <span></span>
-        </button>
     </nav>
-    <div class="container">
+    <div class="container hero-body">
       <div class="items animated fadeIn">
       <!-- Title Texts -->
       <h1 class="title is-2">
