Forgot to comment out in other pages

--- a/about.html
+++ b/about.html
@@ -19,6 +19,11 @@
                 </a>
             </div>
         </div>
+        <!-- <button class="button navbar-burger">
+            <span></span>
+            <span></span>
+            <span></span>
+        </button> -->
         <div class="navbar-end">
               <div class="navbar-item is-active">
                 <a class ="links" href="about.html">ABOUT</a>
