--- a/portfolio.html
+++ b/portfolio.html
@@ -19,6 +19,11 @@
                 </a>
             </div>
         </div>
+        <!-- <button class="button navbar-burger">
+            <span></span>
+            <span></span>
+            <span></span>
+        </button> -->
         <div class="navbar-end">
               <div class="navbar-item">
                 <a class ="links" href="about.html">ABOUT</a>
@@ -30,11 +35,6 @@
                 <a class ="links"  href="DavidLe_Resume.pdf" target="_blank">RESUME</a>
               </div>
         </div>
-        <button class="button navbar-burger">
-            <span></span>
-            <span></span>
-            <span></span>
-        </button>
     </nav>
         <h1 class="title"> COMING SOON :)</h1>
         <h2 class="subtitle"> check out my resume! </h2>
