--- a/index.html
+++ b/index.html
@@ -57,11 +57,8 @@
       <div class="items animated fadeIn">
       <!-- Title Texts -->
       <h1 class="title is-2">
-        <a href="http://davidhle.com/">David Le</a>
+        <a href="http://davidhle.com/">UNDER CONSTRUCTION</a>
       </h1>
-      <h2 class="subtitle">
-        Computational Media Student at Georgia Tech
-      </h2>
       <!-- Social Media Icons -->
       <a href="https://github.com/davidhle" target="_blank">
           <span class="icon">
